<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@drawable/bk">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"

        android:text="@string/project_name"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold"
        android:visibility="visible" />
    <Button
        android:id="@+id/button1"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_up"
        android:layout_alignTop="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginRight="55dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/buttoncss"/>
    <Button
        android:id="@+id/button"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:text="@string/action_sign_in"
        android:background="@drawable/buttoncss"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="114dp"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>







