<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="#35454D">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="Account Login"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold"
        android:visibility="visible" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/relativeLayout">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="55dp"
                    android:layout_marginRight="55dp"
                    android:layout_marginTop="3dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint ="@string/prompt_email"
                    android:visibility="visible" />
            </android.support.design.widget.TextInputLayout>
            
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/editText3"
                    android:layout_marginRight="55dp"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password" />
            </android.support.design.widget.TextInputLayout>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:hint="@string/action_forgot_password"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in" />

        </LinearLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_title"
        android:layout_marginTop="300dp"
        android:layout_marginRight="30dp"
        app:srcCompat="@android:drawable/bottom_bar"
        android:background="@drawable/user_profile_image_background"
        />

</RelativeLayout>

    <!--<include layout="@layout/content_login" />-->